//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.rpc.test;

import "google/protobuf/empty.proto";

service TestService {
  // TODO(dmaretskyi): Rename to "Test".
  rpc TestCall (TestRpcRequest) returns (TestRpcResponse);

  rpc VoidCall (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message TestRpcRequest {
  string data = 1;
}

message TestRpcResponse {
  string data = 1;
}

service TestStreamService {
  rpc TestCall (TestRpcRequest) returns (stream TestRpcResponse);
}
